assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&family=Josefin+Slab:wght@300&family=Lora&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Josefin Slab, sans-serif;
    font-weight: bold;
    color: #337ca0ff;
}

/* Colour Variation */

:root {
    --liver-dogs: #aa6c39ff;
    --claret: #840032ff;
    --platinum: #e6e6e9ff;
    --white: #fafafa;
    --black-chocolate: #0c120cff;
    --celadon-blue: #337ca0ff;
}

/* Logo and Headings Style */

h1,
h2 {
    font-family: Josefin Slab, sans-serif;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 5px;
    color: #840032ff;
}

#sitelogo {
    font-size: 300%;
    font-family: Lora, sans-serif;
    margin-left: 30px;

}

/* Navigation CSS */

#nav-menu {
    background: unset;
    align-items: center;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    font-size: 120%;
    letter-spacing: 5px;
    list-style: none;
    margin-left: 10px;
    margin-right: 10px;
}

#nav-menu a {
    text-decoration: none;
    color: inherit;
    font-weight: 800;
}

#nav-menu,
#sitelogo {
    line-height: 75px;
}

#nav-menu a:hover {
    border-bottom: 2px dashed #840032ff;
}

.active {
    border-bottom: 2px solid #840032ff;
}

/* Exception rule idea from Stack Overflow URL:https://stackoverflow.com/questions/53241566/how-to-make-exceptions-to-css-rules */
a:not(.nav) {
    border: 2px solid var(--liver-dogs);
    padding: 10%;
    box-shadow: 2px 2px 7px 0 rgba(0, 0, 0, 0.3);
}

/* Hero Image & Text */

#hero-image-text,
#hero-image-text h2 {
    /* This tone of white is a better match for the colour scheme than basic #fff */
    color: #e6e6e9ff;
}

#hero-image-text {
    font-size: 100%;
    font-family: Josefin Slab, Times New Roman, sans-serif;
    text-transform: uppercase;
    letter-spacing: 5px;
    text-align: center;
    border-color: #e6e6e9ff;
    border-style: double;
    /* Lines 79-87 style and position background for text. */
    bottom: 60px;
    right: 120px;
    padding: 20px;
    background-color: rgba(170, 108, 57, 0.9);
    position: absolute;
}

#craftworks-big {
    font-size: 50px;
}

#hero-section {
    height: 60vh;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 60vh;
    width: 100%;
    background-image: url(../images/hero_image.jpg);
    background-position: top center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    /* Lines 83-86 add a zoom-in effect to the hero image */
    animation-name: heroimage-zoom;
    animation-duration: 10s;
    animation-fill-mode: forwards;
}

/* Hero Image CSS Animation (Took inspiration from the Love Running Project) */

@keyframes heroimage-zoom {
    from {
        transform: scale(1);
    }

    to {
        transform: scale(1.1)
    }
}

/*Company Ethos*/

.welcome-header {
    text-align: center;
    margin: 10vh;
    font-size: 300%;
}

.company-ethos {
    margin: auto;
    padding-top: 30px;
    height: 500px;
}

.company-ethos p {
    display: inline;
}

hr {
    border-top: 3px dashed #840032ff;
    width: 100%;
    margin-bottom: 10px;
}

#left-ethos {
    padding-top: 30px;
    width: 33%;
    float: left;
    display: flex;
    justify-content: center;
    align-items: center;
}

#right-ethos {
    padding-top: 30px;
    width: 33%;
    float: right;
    display: flex;
    justify-content: center;
    align-items: center;
}

#center-ethos {
    padding-top: 30px;
    width: 33%;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.left-ethos-heading,
.right-ethos-heading {
    width: 60%;
    float: right;
    line-height: 170%;
    clear: both;
    margin-bottom: 50px;
    color: #0c120cff;
}

.right-ethos-heading {
    float: left;
}

.center-ethos-heading {
    width: 300px;
    height: 300px;
    padding: 30px;
    line-height: 170%;
    margin: -30px auto;
    color: #0c120cff;
}

/* Homepage Information Card (Took inspiration from the Happy Dog Cafe Project, Adam Gilroy/adamgilroy22) */

#info-section {
    padding: 30px;
}

#info-section hr {
    border-top: 3px dashed #e6e6e9ff;
    width: 100%;
    margin-bottom: 10px;
}

#info-section-header {
    font-size: 300%;
    text-align: center;
    margin: 20px;
    padding-bottom: 50px;
}

#info-card {
    display: flex;
    line-height: 30px;
    color: #e6e6e9ff;
    background-color: rgba(132, 0, 50, 1);
    border-style: double;
    border: 6px double #e6e6e9ff;
    height: auto;
    width: 55%;
    margin: auto;
    box-shadow: 2px 2px 7px 0 rgba(0, 0, 0, 0.3);
}

#info-card p {
    overflow: hidden;
    font-weight: bold;
    line-height: 2em;
    padding: 0px 10px 25px 10px;
}

#info-card a {
    text-decoration: none;
    color: #e6e6e9ff;
}

.info-card-heading {
    color: #e6e6e9ff;
    font-size: 200%;
    padding-bottom: 20px;
    overflow: hidden;
}

#info-text {
    flex: 1 1 0;
    text-align: center;
    padding-top: 20px;
}

#info-text a:hover {
    border-bottom: 2px dashed #e6e6e9ff;
}

#info-text p:last-of-type {
    padding-bottom: 30px;
}

/* Footer */

footer {
    height: 150px;
}

footer p {
    text-align: center;
    color: #0c120cff;
    padding-bottom: 20px;
    font-style: italic;
}

.social-media,
a {
    text-align: center;
    list-style: none;
    text-decoration: none;
}

.social-media>li {
    display: inline;
}

.social-media i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #0c120cff;
}

/* Gallery Flex Grid */

.gallery-text {
    border: 1px dashed var(--claret);
    padding: 30px;
    text-align: center;
    font-style: italic;
    color: var(--black-chocolate);
    display: flex;
    margin: auto;
    height: 50%;
    width: 50%;
    transform: translate(0%, 0%);
}

.gallery-grid {
    display: grid;
    grid-gap: 2.5em;
    grid-template-columns: 1fr 1fr;
    padding: 2.5em;
}

.gallery-grid>div {
    align-items: space-evenly;
    display: flex;
}

.gallery-grid>div>img {
    width: 100%;
    align-items: center;
    display: flex;
}

/* Form Styling */

.order-welcome {
    border: 1px dashed var(--claret);
    padding: 3%;
    text-align: center;
    line-height: 200%;
    font-style: italic;
    color: var(--black-chocolate);
    display: flex;
    margin: auto auto 5%;
    height: 50%;
    width: 45%;
    transform: translate(0%, 0%);
}

.order-welcome>ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.form-divider {
    border: 4px double var(--claret);
}

.form-container {
    background: #0c120c99 url(../images/form-background.jpg);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-blend-mode: overlay;
    background-size: cover;
    color: var(--platinum);
    display: flex;
    text-align: center;
    justify-content: center;
}

.order-form {
    border: 6px double var(--platinum);
    background-color: var(--claret);
    color: var(--platinum);
    max-width: 50%;
    width: 50%;
    margin: 5vh;
}

.order-form>fieldset {
    margin: 1em;
    border: 1px dashed var(--platinum);
    padding: 10%;
    padding: 6% 0% 6% 0%;
    font-size: 100%;
    line-height: 200%;
}

form>fieldset>legend {
    font-size: 200%;
}

textarea {
    width: 90%;
}

.submit-button {
    background-color: var(--claret);
    color: var(--platinum);
    border: 2px double var(--platinum);
    display: block;
    text-align: center;
    margin: 13% auto;
    font-size: 100%;
    padding: 10px;
    transition-duration: 100ms;
    transition-timing-function: ease-in-out;
    box-shadow: 0px 8px #999;
}

.submit-button:hover {
    transform: scale(1.1);
    transition-property: transform;
    transition-duration: 100ms;
    transition-timing-function: ease-in-out;
    transition-delay: 0s;
    background-color: var(--platinum);
    color: var(--black-chocolate);
    box-shadow: 0 10px #999;
}

/* Button press-in effect code inspired by W3 Schools URL:https://www.w3schools.com/howto/howto_css_animate_buttons.asp */
.submit-button:active {
    box-shadow: 0 5px #999;
    transform: translateY(5px);
}


/* Desktop Responsivity*/


@media screen and (min-width: 50px) {
    .social-media, a {
        margin-top: 5rem;
    }
}

@media screen and (max-width: 1300px) {

    #info-section {
        margin-top: 2rem;
    }

    #company-ethos {
        width: 100%;
        height: auto;
        margin: 0 auto;
    }

    .welcome-header {
        margin: 10vh;
    }

    #left-ethos,
    #right-ethos {
        width: 100%;
        padding: 0;
    }

    #center-ethos {
        clear: both;
        width: 100%;
        padding: 0;
    }

    .center-ethos-heading {
        width: 70%;
        height: 25vh;
    }

    hr {
        border-width: 0.1vh;
    }
}

@media screen and (min-width: 1024px) {

    #info-section {
        margin-top: 2rem;
    }

    .gallery-grid {
        padding: 1em 5em;
        grid-gap: 1em;
        grid-template-columns: 2fr 2fr 2fr 2fr;

    }

    .gallery-grid img {
        transition-duration: 200ms;
        transition-timing-function: ease-in-out;
        border: 6px double var(--claret);
    }

    .gallery-grid img:hover {
        transform: scale(1.2);
        transition-property: transform;
        transition-duration: 200ms;
        transition-timing-function: ease-in-out;
        transition-delay: 0s;
    }
}

/* Mobile Responsivity */

@media screen and (max-width: 768px) {

    #info-section {
        margin-top: 2rem;
    }

    #info-card {
        flex-direction: column;
        width: 75%;
    }

    .order-form {
        max-width: 100%;
        width: 100%;
    }

    #nav-menu {
        flex-direction: column;
        display: flex;
        margin: auto 5% 5%;
        font-weight: bold;
        float: none;
        align-content: stretch;
        justify-content: space-evenly;
        align-items: center;
    }

    #sitelogo {
        margin-left: 2%;
        font-size: 200%;
    }
}

@media screen and (max-width: 320px) {

    #sitelogo {
        font-size: 150%;
    }

    #info-section-header {
        font-size: 150%;
    }
}

